--- a/code/reddit_data_submissions.ipynb
+++ b/code/reddit_data_submissions.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,8 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from datetime import datetime, timedelta\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import os"
    ]
   },
   {
@@ -71,14 +72,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The dotenv extension is already loaded. To reload it, use:\n",
+      "  %reload_ext dotenv\n"
+     ]
+    }
+   ],
    "source": [
+    "%load_ext dotenv\n",
+    "%dotenv\n",
+    "\n",
     "# パラメータの宣言\n",
-    "REDDIT_CLIENT_ID = 'fdX9pzfabxv2KzBwF8ZUTQ'\n",
-    "REDDIT_CLIENT_SECRET = '9gDMvH1S-mnJm-WQq2hAJ_hw7Mf8ag'\n",
-    "REDDIT_USER_AGENT = 'Lazy_Cut_4969'\n",
+    "REDDIT_CLIENT_ID=os.getenv('REDDIT_CLIENT_ID')\n",
+    "REDDIT_CLIENT_SECRET=os.getenv('REDDIT_CLIENT_SECRET')\n",
+    "REDDIT_USER_AGENT=os.getenv('REDDIT_USER_AGENT')\n",
     "SUBREDDITS = ['ps4homebrew', 'Exercise', 'voyageons']  # 対象のサブレディットをリストとして定義\n",
     "TIME_PERIOD_DAYS = 90  # 3か月分の日数"
    ]
