--- a/docs/main.tex
+++ b/docs/main.tex
@@ -67,15 +67,15 @@
     \section{研究背景} %1.1
     21世紀における紛争の展開は、これまでの軍事的な衝突だけでなく、情報空間における戦いも大きな意味を持つようになっている。中でも、ソーシャルネットワーキングサービス（SNS）は紛争のリアルタイムでの情報発信や世論形成において強い影響力を持っている。特にRedditのような匿名性と多様な意見交換が可能なプラットフォームは、国際的な出来事に対する個人の反応を即座に可視化する場として機能している。
 
-    近年再び激化したハマスとイスラエル間の戦闘も例外ではない。この紛争は、1948年のイスラエル建国以来続く複雑な歴史的背景を持つ。パレスチナ人の土地権利や自治権、イスラエルの安全保障、エルサレムの帰属問題など、多岐にわたる争点が存在する。2020年代における衝突は、国際メディアのみならず、SNS上でも大きな反響を呼び、一般市民やアクティビストが紛争に関する意見や情報を活発に投稿する姿が見られた。2021年5月には、エルサレムでの衝突を発端に大規模な戦闘が勃発し、国際社会の注目が集まる中、SNS上での議論や意見表明の場としてRedditは重要な役割を果たしている。このような中で、Redditの投稿数や内容の変化を観察することは、現代の紛争がどのようにデジタル空間で議論され、どのようなトピックが注目されるのかを理解するための重要な手がかりを提供する。
+    近年、再び激化したイスラエルとハマス間の戦闘は、デジタル空間における議論にも大きな影響を及ぼしている。1948年のイスラエル建国以来、パレスチナ人の土地権利や自治権、イスラエルの安全保障、エルサレムの帰属問題など、複雑な歴史的背景が絡むこの対立は、度重なる衝突と共に深刻さを増している。特に2023年10月7日のハマスによる襲撃とその後の戦闘激化は、国際メディアだけでなくSNSでも大きな反響を呼び、一般市民やアクティビストが活発に意見や情報を発信するようになった。この対立は2024年10月1日、イスラエルのレバノン侵攻という形で地域的な拡大を見せ、人道危機への懸念と共にSNS上での議論も一層活発化した。Redditはこの一連の動きを捉える重要な場として機能し、紛争の展開や人道状況に対する人々の反応を観察できる貴重な分析対象となっている。Reddit上の投稿数や内容の変化を観察することで、現代の紛争がどのようにデジタル空間で議論され、どのようなトピックが注目されるのかを理解するための重要な手がかりが得られる。
 
     \section{研究目的}
-    本研究の目的は、ハマスとイスラエルの戦闘が開始された際に、Reddit上でどのような投稿内容や投稿数の変化が生じるかを分析することである。特に、戦闘が勃発した直後の投稿数の増減や、特定のテーマ（例：戦争犯罪、人道的危機、政治的意見）の頻出度の変化に焦点を当てる。本研究は、現代の紛争に対するオンラインコミュニティの反応を解析することで、SNSが世論や情報戦に与える影響について新たな知見を提供することを目指している。
+    本研究の目的は、2024年10月1日のイスラエルによるレバノン侵攻がReddit上でどのように反映されたかを分析することにある。特に、侵攻発生直後の投稿数の変動、および特定のテーマ（例：戦争犯罪、人道的危機、政治的意見）の頻出度の変化に焦点を当てる。本研究は、現代の紛争に対するオンラインコミュニティの反応を解析し、SNSが世論や情報戦に与える影響について新たな知見を提供することを目指している。
 
-    この研究の独自性は、以下の点にある：
+    この研究の独自性は以下の点にある：
 
     \begin{enumerate}
-        \item 1Redditという特定のプラットフォームに焦点を当て、その特異性（匿名性、サブレディット構造）が国際紛争の議論にどのような影響を与えるかを明らかにする。
+        \item Redditという特定のプラットフォームに焦点を当て、その特異性（匿名性、サブレディット構造）が国際紛争に関する議論にどのような影響を与えるかを明らかにする。
 
         \item 大規模なデータ分析と質的分析を組み合わせることで、単なる投稿数の変化だけでなく、議論の質的変化も捉える。
 
@@ -85,7 +85,7 @@
     本研究で取り上げる仮説は以下の通りである：
 
     \begin{enumerate}
-        \item ハマス・イスラエル間の戦闘が開始されると、Reddit上での投稿数は急増し、議論は一時的に過激化する傾向がある。
+        \item レバノン侵攻が発生すると、Reddit上の投稿数は急増し、議論は一時的に過激化する傾向がある。
 
         \item Redditの各サブフォーラムでは異なる視点や意見が展開され、一部では紛争の当事者に対する支持や批判が顕著に表れる。
 
