--- a/docs/main.tex
+++ b/docs/main.tex
@@ -211,14 +211,14 @@
 
     さらに、LDAを用いたトピックモデリングは、人間の主観に頼らずに大量のテキストデータから潜在的なテーマを抽出できる点で有効である。これにより、研究者の予見にとらわれない、データ駆動型の分析が可能となる。
 
-    \subsection{定量的分析手法の有効性}
+    \subsection{定性的分析手法の有効性}
     定性的分析は、定量的分析で示された傾向の背景にある具体的な内容を深く掘り下げる手法として有効である。特に感情分析やキーワードの頻出度解析を通じて、ユーザーが投稿の中でどのような感情や意図を持って情報を発信しているかを理解することができる。
 
     VADERとTextBlobを併用した感情分析アプローチは、単一のツールを使用する場合と比較して、より信頼性の高い結果を得ることができる。これは、特に皮肉や文脈依存の表現が多いSNS上のテキストデータの分析に有効である。
 
     また、N-gram分析を用いたキーワードやフレーズの頻出度解析は、単に単語の出現頻度を数えるだけでなく、より複雑な概念や表現の使用傾向を把握することができる。これにより、ユーザーの思考や議論の枠組みをより正確に理解することが可能となる。
 
-    \section{分析手法の有効性}
+    \section{分析手法の限界と課題}
     本研究で採用した分析手法には、いくつかの限界が存在する。まず、データ収集においては、Redditの投稿が全て人間によって行われているわけではなく、ボットなどの自動投稿が存在する可能性がある。この問題に対処するため、ボット検出アルゴリズム（例：投稿パターンの分析、ユーザー履歴の確認）を実装し、明らかな自動投稿やスパムを除外することが今後の課題となる。
 
     感情分析においては、文脈や文化的な違いによって解釈が異なる可能性がある。この限界に対しては、複数の感情分析ツールを併用するだけでなく、一部の投稿については人間による手動のコーディングを行い、機械学習モデルの結果と比較検証するべきだろう。これにより、文化的なニュアンスや複雑な文脈を考慮した、より正確な感情分析が可能となる。
