Changes the way how I collect and analyze data and which data I will do

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -134,28 +134,14 @@
 
     \section{データ収集の方法}
     \subsection{PRAWおよびPushshift APIを用いたデータ収集}
-    RedditのAPIであるPRAW (Python Reddit API Wrapper) と、Redditのアーカイブデータを提供するPushshift
-    APIを組み合わせることで、大規模な投稿データを効率的に収集する。具体的には、2021年5月10日（ハマス・イスラエル間の大規模衝突の開始日）から2021年6月10日までの1ヶ月間のデータを収集する。この期間設定により、紛争勃発直後の急激な反応から、その後の議論の推移まで包括的に分析することが可能となる。
+    RedditのAPIであるPRAW (Python Reddit API Wrapper) で大規模な投稿データを効率的に収集する。具体的には、イスラエルによるレバノン侵攻（2024年10月1日）前後の動向を探るため、2024年7月23日から2024年10月23日までの3ヶ月間のデータを収集する。この期間設定により、紛争勃発直後の急激な反応から、その後の議論の推移まで包括的に分析することが可能となる。
 
-    収集対象となるサブレディットは、r/worldnews、r/politics、r/Israel、r/Palestineの4つとする。これらのサブレディットは、国際ニュースや中東情勢に関する議論が活発に行われている場所であり、異なる視点や立場からの意見を収集することができる。
-
-    \subsection{キーワードベースの投稿抽出}
-    データ収集をより精緻化するために、以下のキーワードに基づいて投稿を抽出する：
-
-    \begin{itemize}
-        \item 紛争関連：「Hamas」「Israel」「Gaza」「conflict」「war」「ceasefire」
-
-        \item 人道的側面：「civilian」「casualty」「humanitarian」「refugee」
-
-        \item 国際的反応：「UN」「US」「EU」「sanctions」「diplomacy」
-    \end{itemize}
-
-    これらのキーワードは、紛争の多面的な側面を捉えるために選定された。キーワードリストは、初期データ分析の結果に基づいて適宜調整される。
+    収集対象となるサブレディットは、r/Israel、r/Palestine、r/IsraelPalestineの3つとする。これらのサブレディットは、イスラエル・パレスチナに関する議論が活発に行われている場所であり、異なる視点や立場からの意見を収集することができる。
 
     \section{定量的分析手法}
-    投稿数の時間変化を可視化し、紛争の進展に伴う関心の変動を分析する。具体的には、Pythonのmatplotlibやseabornを用いて、1時間ごとの投稿数の推移をグラフ化する。また、紛争関連のイベント（例：停戦合意、重要な軍事行動）との対応関係を検証するため、これらのイベントをタイムラインに組み込む。
+    投稿数の時間変化を可視化し、紛争の進展に伴う関心の変動を分析する。具体的には、Pythonのmatplotlibやseabornを用いて、1日ごとの投稿数の推移をグラフ化する。また、レバノン侵攻との対応関係を検証するため、このイベントをタイムラインに組み込む。
 
-    さらに、差分の差分分析（DID）を用いて、紛争関連サブレディットと対照群（例：r/AskReddit）との間で投稿数の変化を比較する。DIDモデルの式は以下の通りである：
+    さらに、差分の差分分析（DID）を用いて、紛争関連サブレディットと対照群（r/ps4homebrew、r/Exercise、r/voyageons）との間で投稿数の変化を比較する。DIDモデルの式は以下の通りである：
 
     \begin{equation}
         Y[it] = β_{0}+ β_{1}* Treatment[i] + β_{2}* Post[t] + β_{3}* (Treatme nt[
